# Motion_detector

./: CMakeLists.txt  CMakeSettings.json  README.md
Motion_detector/: CMakeLists.txt  main.cpp  main.h
